src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <formula>LEFT(LastName + &apos;, &apos; +  FirstName, 30)</formula>
        <label>Abbreviated Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>REDUNDANT FIELD - PENDING DELETION FROM APEX CODE TO REMOVE</description>
        <label>No.of Accounts Owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>The business unit the user is assigned to within Pearson</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>CTIMGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Field Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <description>This field identifies the user&apos;s assigned territory code</description>
        <label>Charge Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_ID__c</fullName>
        <formula>RIGHT(TEXT(Sales_Force__c), 2)</formula>
        <label>Division ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divison__c</fullName>
        <description>Sub-division of Business Unit 
For CTIMGI - Used to record which Campus the user is associated to.</description>
        <label>Division</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Bedfordview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Rep_Number__c</fullName>
        <externalId>true</externalId>
        <label>External Rep #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>To which of the Pearson Geographies does this user belong</description>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>The job title of the user. Dependent on Business Unit.</description>
        <label>Job Function</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Business Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Digital Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficacy &amp; Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Technology Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager/Product Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Business Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>The user&apos;s line of business</description>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Field used to &apos;tag&apos; records created by the user (records inherit a market from the creator) and also used in sharing rules to limit/extend record visibility</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_For_Feed__c</fullName>
        <formula>IF ((LEN(FirstName + &quot; &quot; + LastName) &gt; 30), (LEFT(FirstName,1) + &quot; &quot; + LastName), (FirstName + &quot; &quot; + LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name For Feed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Approver__c</fullName>
        <description>This is used to set the approver for the order generated by the sales representative</description>
        <label>Order Approver</label>
        <relationshipName>OrderApprover</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <label>Physical Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>Physical City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <label>Physical State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Zip__c</fullName>
        <label>Physical Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <description>Associated Price List, Sales Force</description>
        <label>Price List</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities &amp; Social Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math &amp; Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional &amp; Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US HE All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Midran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Global: The user&apos;s role or job function at Pearson</description>
        <label>Function</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Force__c</fullName>
        <description>The users Sales Force, Used as part of Territory Management. US FS to provide values as part of R2</description>
        <label>Sales Force</label>
        <picklist>
            <picklistValues>
                <fullName>Humanities &amp; Social Sciences - 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math &amp; Science - 44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional &amp; Career - 43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - 21</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Price_RM_Approval_Group__c</fullName>
        <label>Special Price RM Approval Group</label>
        <picklist>
            <picklistValues>
                <fullName>Central - Region 2 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central - Region 2 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central - Region 2 P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central - Region 4 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central - Region 4 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central - Region 4 P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 1 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 1 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 1 P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 3 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 3 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East - Region 3 P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - Region 6 Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - Region 6 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - Region 6 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National - Region 6 P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West - Region 5 HSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West - Region 5 M&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West - Region 5 P&amp;C</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>This field identifies the user&apos;s specialty as it pertains a particular price list</description>
        <label>Specialty</label>
        <picklist>
            <controllingField>Price_List__c</controllingField>
            <picklistValues>
                <fullName>Generalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Languages</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Accenture_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>accenture</value>
        </filters>
        <label>Accenture Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveDataAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pearson Data Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Data Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActivePearsonAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pearson Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Pearson Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActivePearsonSalesUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pearson Sales</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Pearson Sales Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveSystemAdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active System Admin Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Market__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_ALIAS</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_UPDATE_BY_ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Production_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>New Production Users</label>
    </listViews>
    <listViews>
        <fullName>New_Production_Users_Inactive</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New Production Users Inactive</label>
    </listViews>
    <listViews>
        <fullName>Recently_added</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Recently added</label>
    </listViews>
    <listViews>
        <fullName>System_Admin_Users</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>System Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TESTING_USERS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Price_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Pearson Sales User OneCRM</value>
        </filters>
        <label>TESTING USERS</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>